--- a/blog/2023-09-08-release-23.09.md
+++ b/blog/2023-09-08-release-23.09.md
@@ -1,15 +1,11 @@
 ---
 title: Tractus-X 23.09 available now
-description: Release Tractus-X 23.09 announcement 
+description: Release Tractus-X 23.09 announcement
 slug: new-release-23.09
 date: 2023-09-08T11:00
 hide_table_of_contents: false
 authors:
-  - name: Daniel Miehle
-    title: Tractus-X Project Lead
-    url: https://github.com/danielmiehle
-    image_url: https://github.com/danielmiehle.png
-    email: daniel.miehle@bmw.de
+  - daniel_miehle
 ---
 
 ![eclipse tractus x logo](@site/static/img/release_23.09.png)
