--- a/blog/2023-10-26-open-planning.mdx
+++ b/blog/2023-10-26-open-planning.mdx
@@ -5,11 +5,7 @@ slug: open-planning-days
 date: 2023-10-04T11:00
 hide_table_of_contents: false
 authors:
-  - name: Stephan Bauer
-    title: Plattform Domain Manager
-    url: https://github.com/stephanbcbauer
-    image_url: https://github.com/stephanbcbauer.png
-    email: stephan.bauer@catena-x.net
+  - stephan_bauer
 ---
 
 import RenderImage from './RenderImage'
@@ -142,12 +138,12 @@ Timeline | Team/Topic | Presenter | Consortium representative | Issues
 ## Stay Connected
 
 Follow our [news section](https://eclipse-tractusx.github.io/blog) and join our [Tractus-X mailing list](https://eclipse-tractusx.github.io/docs/oss/how-to-contribute/#dev-mailinglist)
-and be part of our [Matrix Chat from Eclipse Tractus-X](https://chat.eclipse.org/#/room/#tools.tractus-x:matrix.eclipse.org) 
+and be part of our [Matrix Chat from Eclipse Tractus-X](https://chat.eclipse.org/#/room/#tools.tractus-x:matrix.eclipse.org)
 
 For more details about Tractus-X, visit the official [Eclipse Tractus-X Project Page](https://projects.eclipse.org/projects/automotive.tractusx).
 
 ---
 
-Looking forward to planning, coding, and succeeding together! 
+Looking forward to planning, coding, and succeeding together!
 
 🚀 **The Tractus-X Team**
