--- a/blog/2023-11-22-release_tutorials.mdx
+++ b/blog/2023-11-22-release_tutorials.mdx
@@ -5,11 +5,7 @@ slug: release-tutorials
 date: 2023-11-28T09:00
 hide_table_of_contents: false
 authors:
-  - name: Stephan Bauer
-    title: Platform Domain Manager
-    url: https://github.com/stephanbcbauer
-    image_url: https://github.com/stephanbcbauer.png
-    email: stephan.bauer@catena-x.net
+  - stephan_bauer
 ---
 
 ![eclipse tractus x logo](@site/static/img/TractusX-Tutorials_E2E.png)
