--- a/blog/2024-01-10-open-planning.mdx
+++ b/blog/2024-01-10-open-planning.mdx
@@ -5,22 +5,18 @@ slug: open-planning-days-pi12
 date: 2023-12-11T21:51
 hide_table_of_contents: false
 authors:
-  - name: Stephan Bauer
-    title: Platform Domain Manager
-    url: https://github.com/stephanbcbauer
-    image_url: https://github.com/stephanbcbauer.png
-    email: stephan.bauer@catena-x.net
+  - stephan_bauer
 ---
 
 ![eclipse tractus x logo](@site/static/img/Tractus-X_openplanning.png)
 
 Dear Tractus-X Community Members 🎉,
- 
+
 We are excited to extend this invitation to you for our upcoming Tractus-X meetings. These meetings are a great opportunity for both business stakeholders and developers to contribute and collaborate on the future of Tractus-X.
 Please feel free to forward this post to anyone interested in contributing, whether in planning or development.
- 
+
 **Upcoming Meetings:**
- 
+
 - **Tractus-X Guardrails**
   - Date: 13th December 2023
   - Time: 13:00 - 14:00
@@ -41,7 +37,7 @@ Please feel free to forward this post to anyone interested in contributing, whet
 <!--truncate-->
 
 ## Staying Informed
- 
+
 To stay updated on any changes or additional information, please subscribe to our mailing list. A great way to keep informed is through the provided [Tractus-X Development Mailing List RSS Feed](https://www.eclipse.org/lists/tractusx-dev/maillist.rss).
 
 :::tip
@@ -51,19 +47,19 @@ Here, you can also find previous messages for reference.
 :::
 
 ## Feature Creation on SIG-Release Board
- 
+
 As with the last PI, you can already start creating features in the [SIG-Release board](https://github.com/orgs/eclipse-tractusx/projects/26). Please visit SIG-Release Board on GitHub to contribute.
 The only change this time is the label, which should now be `Prep-PI12`.
- 
+
 ## Further Information
- 
+
 For more details about the planning process and what these meetings entail, please refer to our guide on [Open Refinement and Planning in Open Source Communities](https://github.com/eclipse-tractusx/sig-release/blob/main/docs/Open-Refinement-and-Planning-in-Open-Source-Communities.md)
  and of course the sig-release [README](https://github.com/eclipse-tractusx/sig-release/blob/main/README.md)
 
 ## Stay Connected
 
 Follow our [news section](https://eclipse-tractusx.github.io/blog) and join our [Tractus-X mailing list](https://eclipse-tractusx.github.io/docs/oss/how-to-contribute/#dev-mailinglist)
-and be part of our [Matrix Chat from Eclipse Tractus-X](https://chat.eclipse.org/#/room/#tools.tractus-x:matrix.eclipse.org) 
+and be part of our [Matrix Chat from Eclipse Tractus-X](https://chat.eclipse.org/#/room/#tools.tractus-x:matrix.eclipse.org)
 
 For more details about Tractus-X, visit the official [Eclipse Tractus-X Project Page](https://projects.eclipse.org/projects/automotive.tractusx).
 
