--- a/blog/2024-04-10-open-planning-r24.08.mdx
+++ b/blog/2024-04-10-open-planning-r24.08.mdx
@@ -5,11 +5,7 @@ slug: open-planning-r24-08
 date: 2024-02-19T11:00
 hide_table_of_contents: false
 authors:
-  - name: Stephan Bauer
-    title: Platform Domain Manager
-    url: https://github.com/stephanbcbauer
-    image_url: https://github.com/stephanbcbauer.png
-    email: stephan.bauer@catena-x.net
+  - stephan_bauer
 ---
 
 ![eclipse tractus x logo](@site/static/img/Tractus-X_openplanning.png)
