--- a/blog/2024-07-31-open-planning-r24.12.mdx
+++ b/blog/2024-07-31-open-planning-r24.12.mdx
@@ -5,11 +5,7 @@ slug: open-planning-r24-12
 date: 2024-04-16T11:00
 hide_table_of_contents: false
 authors:
-  - name: Stephan Bauer
-    title: Platform Domain Manager
-    url: https://github.com/stephanbcbauer
-    image_url: https://github.com/stephanbcbauer.png
-    email: stephan.bauer@catena-x.net
+  - stephan_bauer
 ---
 
 ![eclipse tractus x logo](/img/Tractus-X_openplanning.png)
