--- a/blog/2024-11-06-refinement-day-2-R25.03.mdx
+++ b/blog/2024-11-06-refinement-day-2-R25.03.mdx
@@ -5,11 +5,7 @@ slug: refinement-day-2-R25.03
 date: 2024-10-10T12:38
 hide_table_of_contents: false
 authors:
-  - name: Stephan Bauer
-    title: Platform Domain Manager
-    url: https://github.com/stephanbcbauer
-    image_url: https://github.com/stephanbcbauer.png
-    email: stephan.bauer@catena-x.net
+  - stephan_bauer
 ---
 
 import RenderImage from './RenderImage'
