--- a/blog/2024-11-18-overview-results-R25.03.mdx
+++ b/blog/2024-11-18-overview-results-R25.03.mdx
@@ -5,11 +5,7 @@ slug: open-planning-recap-R25.03
 date: 2024-11-18T11:05
 hide_table_of_contents: false
 authors:
-  - name: Stephan Bauer
-    title: Platform Domain Manager
-    url: https://github.com/stephanbcbauer
-    image_url: https://github.com/stephanbcbauer.png
-    email: stephan.bauer@catena-x.net
+  - stephan_bauer
 ---
 
 ![eclipse tractus x logo](@site/static/img/Tractus-X_openplanning.png)
