--- a/blog/2024-12-05-community-days.mdx
+++ b/blog/2024-12-05-community-days.mdx
@@ -5,11 +5,7 @@ slug: community-days-12-2024
 date: 2024-09-17T16:00
 hide_table_of_contents: false
 authors:
-  - name: Stephan Bauer
-    title: Platform Domain Manager
-    url: https://github.com/stephanbcbauer
-    image_url: https://github.com/stephanbcbauer.png
-    email: stephan.bauer@catena-x.net
+  - stephan_bauer
 ---
 
 import RenderImage from './RenderImage'
