--- a/blog/2025-03-20-release-planning-R25.09.mdx
+++ b/blog/2025-03-20-release-planning-R25.09.mdx
@@ -5,11 +5,7 @@ slug: release-planning-R25.09
 date: 2025-03-20T17:00
 hide_table_of_contents: false
 authors:
-  - name: Theresa Hilger
-    title: Data Space Operations Manager
-    url: https://github.com/ther3sa
-    image_url: https://github.com/ther3sa.png
-    email: theresa.hilger@catena-x.net
+  - theresa_hilger
 ---
 
 import RenderImage from './RenderImage'
