--- a/blog/2023-05-26-release-3-1-0.md
+++ b/blog/2023-05-26-release-3-1-0.md
@@ -1,15 +1,11 @@
 ---
 title: Tractus-X 3.1 available now
-description: Release Tractus-X 3.1.0 announcement 
+description: Release Tractus-X 3.1.0 announcement
 slug: new-release-3-1-0
 date: 2023-05-26T11:00
 hide_table_of_contents: false
 authors:
-  - name: Daniel Miehle
-    title: Tractus-X Project Lead
-    url: https://github.com/danielmiehle
-    image_url: https://github.com/danielmiehle.png
-    email: daniel.miehle@bmw.de
+  - daniel_miehle
 ---
 
 We are pleased to announce the release of [Tractus-X 3.1!](https://eclipse-tractusx.github.io/CHANGELOG/#310---2023-05-17) This release brings important improvements to the robustness, quality, and overall user experience of the Catena-X data space. In addition, we introduce exciting new offerings for our solution providers such as the Traceability KIT and the Country Risk Service.
