--- a/blog/2023-09-20-community-days.mdx
+++ b/blog/2023-09-20-community-days.mdx
@@ -5,18 +5,14 @@ slug: community-days
 date: 2023-09-20T11:00
 hide_table_of_contents: false
 authors:
-  - name: Daniel Miehle
-    title: Tractus-X Project Lead
-    url: https://github.com/danielmiehle
-    image_url: https://github.com/danielmiehle.png
-    email: daniel.miehle@bmw.de
+  - daniel_miehle
 ---
 
 import RenderImage from './RenderImage'
 
 ![eclipse tractus x logo](@site/static/img/Eclipse-TractusX-CommunityDays_Event2.png)
 
-Dear Tractus-X-Community, dear All, 
+Dear Tractus-X-Community, dear All,
 being interested in Catena-X and the open source reference implementations, KITs and open core products in the Tractus-X project or in general in the technology of data sovereign data exchange,
 
 **We are pleased to announce the First Eclipse Tractus-X Community Days, which will take place on December 7th and 8th at ARENA2036 in Stuttgart.**
@@ -26,15 +22,15 @@ being interested in Catena-X and the open source reference implementations, KITs
 ### Worth being there
 At this networking and coding event at ARENA2036, we offer you the opportunity to come together live with the developer community and actively code with our Tractus-X IT tools (KITs) for the Eclipse Tractus-X project and exchange ideas with our technical experts. Gain deep insights into the Catena-X architecture and actively contribute your ideas to practical participation opportunities (use cases, KITs, services).
 
-### What awaits you 
-The agenda includes short keynote speeches with highly interesting technical insights, deep dives for a practical introduction to open-source programming topics and IT tools (our Open-Source Tractus-X KITs) and, above all, workshops in which you can become active and code yourself. You can bring your own challenges (please coordinate with us beforehand). At the evening event on the first day you can network, talk shop, code until late into the night - and of course just have fun. 
+### What awaits you
+The agenda includes short keynote speeches with highly interesting technical insights, deep dives for a practical introduction to open-source programming topics and IT tools (our Open-Source Tractus-X KITs) and, above all, workshops in which you can become active and code yourself. You can bring your own challenges (please coordinate with us beforehand). At the evening event on the first day you can network, talk shop, code until late into the night - and of course just have fun.
 
 <RenderImage />
 
 
-### Who meets here 
+### Who meets here
 - Developers who use Tractus-X or want to participate.
-- Service or solution providers who want to participate in the Catena-X ecosystem. 
+- Service or solution providers who want to participate in the Catena-X ecosystem.
 - Data providers who want to provide data in the right format and with the right semantics.
 - Those responsible for the planning and development of products (product owners or product managers) who want to learn how projects are planned in open source.
 
@@ -45,9 +41,9 @@ If you would like to join, please register for free via Eventbrite:
 [Tractus-X Community Days registration](https://www.eventbrite.com/e/first-eclipse-tractus-x-community-days-tickets-721974885317?aff=oddtdtcreator). The number of places is limited, so it is worth being quick!
 
 ### Contact
-If you have any questions about the event, please contact heike.wohlfeld@arena2036.de. 
+If you have any questions about the event, please contact heike.wohlfeld@arena2036.de.
 
-**Get to know the developer community live and network with like-minded people - we look forward to your creativity and contributions! 
+**Get to know the developer community live and network with like-minded people - we look forward to your creativity and contributions!
 Your Tractus-X Team**
 
 ### Presenters of the event
