--- a/blog/2024-05-28-release-24-05.md
+++ b/blog/2024-05-28-release-24-05.md
@@ -1,15 +1,11 @@
 ---
 title: Tractus-X 24.05 available now
-description: Release Tractus-X 24.05 announcement 
+description: Release Tractus-X 24.05 announcement
 slug: new-release-2405
 date: 2024-05-28T10:00
 hide_table_of_contents: false
 authors:
-  - name: Hanno Focken
-    title: Ecosystem & Kits
-    url: https://github.com/hfocken
-    image_url: https://github.com/hfocken.png
-    email: hanno.focken@catena-x.net
+  - hanno_focken
 ---
 
 ![Release Image](@site/static/img/Tractus-X_Release24.05.png)
