--- a/blog/2024-12-16-community-days-recap.mdx
+++ b/blog/2024-12-16-community-days-recap.mdx
@@ -5,11 +5,7 @@ slug: community-days-recap-12-2024
 date: 2024-12-16T11:00
 hide_table_of_contents: false
 authors:
-  - name: Stephan Bauer
-    title: Eclipse Tractus-X Project Lead
-    url: https://github.com/stephanbcbauer
-    image_url: https://github.com/stephanbcbauer.png
-    email: stephan.bauer@catena-x.net
+  - stephan_bauer
 ---
 
 import RenderImage from './RenderImage'
