--- a/blog/2025-02-19-release-planning-R25.06.mdx
+++ b/blog/2025-02-19-release-planning-R25.06.mdx
@@ -5,11 +5,7 @@ slug: release-planning-R25.06
 date: 2024-12-13T11:00
 hide_table_of_contents: false
 authors:
-  - name: Stephan Bauer
-    title: Eclipse Tractus-X Project Lead
-    url: https://github.com/stephanbcbauer
-    image_url: https://github.com/stephanbcbauer.png
-    email: stephan.bauer@catena-x.net
+  - stephan_bauer
 ---
 
 import RenderImage from './RenderImage'
