--- a/blog/2025-03-17-dark-and-light-themes.mdx
+++ b/blog/2025-03-17-dark-and-light-themes.mdx
@@ -4,11 +4,7 @@ description: A Fresh, Elegant Look for the page
 date: 2025-02-12T08:00
 hide_table_of_contents: false
 authors:
-  - name: Michaela Kleynhans 
-    title: Light Theme Webpage for Tractus-X
-    url: https://github.com/michaelakleynhans
-    image_url: https://avatars.githubusercontent.com/u/158182781?v=4
-    email: michaela.kleynhans@mercedes-benz.com
+  - michaela_kleynhans
 ---
 
 ![theme image](@site/static/img/light-dark-theme.png)
