--- a/docs-kits/kits/industry-core-kit/software-development-view/aspect-models.mdx
+++ b/docs-kits/kits/industry-core-kit/software-development-view/aspect-models.mdx
@@ -7,7 +7,7 @@ sidebar_position: 2
 
 import AspectModelOverview from './parts/aspect-model-overview.mdx'
 
-![Industry Core kit banner](@site/static/img/kits/industry-core/industry-core-kit-logo.drawio.svg)
+![Industry Core kit banner](@site/static/img/kits/industry-core/industry-core-kit-logo.svg)
 
 Aspect models are mostly easy to create by transforming a company's internal data into the target aspect model. Transformations are mostly straightforward in these cases. If necessary, special steps in creating aspect models are mentioned in the corresponding sections.
 
