--- a/docs-kits/kits/industry-core-kit/software-operation-view.mdx
+++ b/docs-kits/kits/industry-core-kit/software-operation-view.mdx
@@ -5,7 +5,7 @@ description: 'Industry Core Kit'
 sidebar_position: 3
 ---
 
-![Industry Core kit banner](@site/static/img/kits/industry-core/industry-core-kit-logo.drawio.svg)
+![Industry Core kit banner](@site/static/img/kits/industry-core/industry-core-kit-logo.svg)
 
 The following page offers information on how to operate and deploy the Industry Core.
 
