--- a/docs-kits_versioned_docs/version-24.12/kits/industry-core-kit/architecture-view.mdx
+++ b/docs-kits_versioned_docs/version-24.12/kits/industry-core-kit/architecture-view.mdx
@@ -7,7 +7,7 @@ sidebar_position: 2
 
 import FutureConcepts from './parts/future-concepts.mdx'
 
-![Industry Core kit banner](@site/static/img/kits/industry-core/industry-core-kit-logo.drawio.svg)
+![Industry Core kit banner](@site/static/img/kits/industry-core/industry-core-kit-logo.svg)
 
 The following page offers an architecture perspective including the main building blocks and information regarding
 communication between different components, shown as sequence diagrams in a runtime view. In general, data access must
