--- a/docs-kits_versioned_docs/version-24.12/kits/industry-core-kit/changelog.mdx
+++ b/docs-kits_versioned_docs/version-24.12/kits/industry-core-kit/changelog.mdx
@@ -5,7 +5,7 @@ description: 'Industry Core Kit'
 sidebar_position: 0
 ---
 
-![Industry Core kit banner](@site/static/img/kits/industry-core/industry-core-kit-logo.drawio.svg)
+![Industry Core kit banner](@site/static/img/kits/industry-core/industry-core-kit-logo.svg)
 
 All notable changes to this Kit will be documented in this file.
 
