--- a/docs-kits_versioned_docs/version-25.03/kits/industry-core-kit/business-view.mdx
+++ b/docs-kits_versioned_docs/version-25.03/kits/industry-core-kit/business-view.mdx
@@ -7,7 +7,7 @@ sidebar_position: 1
 
 import BillOfMaterials from './parts/bill-of-materials.mdx'
 
-![Industry Core kit banner](@site/static/img/kits/industry-core/industry-core-kit-logo.drawio.svg)
+![Industry Core kit banner](@site/static/img/kits/industry-core/industry-core-kit-logo.svg)
 
 The following page offers a high level business view on the Industry Core KIT with its vision, mission, benefits, business value, customer journey and examples in form of videos.
 
