--- a/docs-kits_versioned_docs/version-25.03/kits/industry-core-kit/software-development-view/digital-twins.mdx
+++ b/docs-kits_versioned_docs/version-25.03/kits/industry-core-kit/software-development-view/digital-twins.mdx
@@ -7,7 +7,7 @@ sidebar_position: 1
 
 import UniqueIDPush from './parts/uniqueidpush.mdx'
 
-![Industry Core kit banner](@site/static/img/kits/industry-core/industry-core-kit-logo.drawio.svg)
+![Industry Core kit banner](@site/static/img/kits/industry-core/industry-core-kit-logo.svg)
 
 Industry Core uses digital twins to make a company's data available to other Catena-X partners. Basics about digital twins with which you should be familiar to understand this section are described in the [Digital Twin KIT](../../../../../docs-kits/category/digital-twin-kit).
 
