--- a/docs-kits_versioned_docs/version-25.03/kits/industry-core-kit/software-development-view/policies.mdx
+++ b/docs-kits_versioned_docs/version-25.03/kits/industry-core-kit/software-development-view/policies.mdx
@@ -5,7 +5,7 @@ description: "Industry Core KIT"
 sidebar_position: 4
 ---
 
-![Industry Core kit banner](@site/static/img/kits/industry-core/industry-core-kit-logo.drawio.svg)
+![Industry Core kit banner](@site/static/img/kits/industry-core/industry-core-kit-logo.svg)
 
 The Policies are used to increase data sovereignty by limiting the access and usage of data. In the following, access
 and usage policies with their usage in the EDC are described. An explanation of Policy-handling mechanics in the EDC
