--- a/docs-kits/kits/traceability-kit/architecture-view.mdx
+++ b/docs-kits/kits/traceability-kit/architecture-view.mdx
@@ -5,7 +5,7 @@ description: 'Traceability Kit'
 sidebar_position: 2
 ---
 
-![Traceability kit banner](@site/static/img/kits/traceability/traceability-kit-logo.drawio.svg)
+![Traceability kit banner](@site/static/img/kits/traceability/traceability-kit-logo.svg)
 
 The following page offers an architecture perspective including the main building blocks and information regarding communication between different components, shown as sequence diagrams in a runtime view.
 
