--- a/docs-kits/kits/traceability-kit/business-view.mdx
+++ b/docs-kits/kits/traceability-kit/business-view.mdx
@@ -7,7 +7,7 @@ sidebar_position: 1
 
 import BillOfMaterials from './../industry-core-kit/parts/bill-of-materials.mdx'
 
-![Traceability kit banner](@site/static/img/kits/traceability/traceability-kit-logo.drawio.svg)
+![Traceability kit banner](@site/static/img/kits/traceability/traceability-kit-logo.svg)
 
 The following page offers a high level business view on the Traceability KIT with its vision, mission, benefits, business value, customer journey and examples in form of videos.
 
