--- a/docs-kits/kits/traceability-kit/software-development-view/app-provider.mdx
+++ b/docs-kits/kits/traceability-kit/software-development-view/app-provider.mdx
@@ -5,7 +5,7 @@ description: "Traceability Kit"
 sidebar_position: 2
 ---
 
-![Traceability kit banner](@site/static/img/kits/traceability/traceability-kit-logo.drawio.svg)
+![Traceability kit banner](@site/static/img/kits/traceability/traceability-kit-logo.svg)
 
 The following page offers specific developer resources, including payloads and API endpoints for data consumer and app provider. It is important to read the business and architecture view first to understand everything.
 
