--- a/docs-kits/kits/traceability-kit/software-development-view/data-provider.mdx
+++ b/docs-kits/kits/traceability-kit/software-development-view/data-provider.mdx
@@ -7,7 +7,7 @@ sidebar_position: 1
 
 import AspectModels from './parts/aspect-models.mdx'
 
-![Traceability kit banner](@site/static/img/kits/traceability/traceability-kit-logo.drawio.svg)
+![Traceability kit banner](@site/static/img/kits/traceability/traceability-kit-logo.svg)
 
 The following page offers specific developer resources, including payloads and API endpoints for data providers. It is important to read the business and architecture view first to understand everything.
 
