--- a/docs-kits/kits/traceability-kit/software-operation-view.mdx
+++ b/docs-kits/kits/traceability-kit/software-operation-view.mdx
@@ -5,7 +5,7 @@ description: 'Traceability Kit'
 sidebar_position: 3
 ---
 
-![Traceability kit banner](@site/static/img/kits/traceability/traceability-kit-logo.drawio.svg)
+![Traceability kit banner](@site/static/img/kits/traceability/traceability-kit-logo.svg)
 
 The following page offers information on how to operate and deploy a Traceability application.
 
