--- a/docs-kits/kits/traceability-kit/changelog.mdx
+++ b/docs-kits/kits/traceability-kit/changelog.mdx
@@ -5,7 +5,7 @@ description: 'Traceability Kit'
 sidebar_position: 0
 ---
 
-![Traceability kit banner](@site/static/img/kits/traceability/traceability-kit-logo.drawio.svg)
+![Traceability kit banner](@site/static/img/kits/traceability/traceability-kit-logo.svg)
 
 All notable changes to this Kit will be documented in this file.
 
