--- a/blog/2024-05-16-community-days.mdx
+++ b/blog/2024-05-16-community-days.mdx
@@ -68,7 +68,7 @@ Register for free via [eveeno](https://eveeno.com/tractus-x-community-days). The
 
 :::
 
-If you have any questions about the event, please contact Heike Wohlfeld at [heike.wohlfeld@arena2036.de](heike.wohlfeld@arena2036.de).
+If you have any questions about the event, please contact Heike Wohlfeld at [heike.wohlfeld@arena2036.de](mailto:heike.wohlfeld@arena2036.de).
 
 We look forward to welcoming you to this exciting event and exploring the possibilities of Tractus-X and the Catena-X KITs together!
 
