--- a/docs-kits_versioned_docs/version-24.08/kits/industry-core-kit/software-development-view/parts/uniqueidpush.mdx
+++ b/docs-kits_versioned_docs/version-24.08/kits/industry-core-kit/software-development-view/parts/uniqueidpush.mdx
@@ -123,7 +123,7 @@ Upon receipt of the message, the supplier needs to update the corresponding sing
 
 #### Schema of Unique ID Push Notifications
 
-The Unique ID Push notifications have a standardized format. Schemas of these notifications are described in detail in the Unique ID Push Open API specification. The standardized version of this API is [2.0.0](../openapi/unique-id-push.yaml). Version [2.1.0](../openapi/unique-id-push_2-1-0.yaml) is not (yet) standardized, but backwards compatible, and extends v2.0.0 with the Connect-to-Child feature.
+The Unique ID Push notifications have a standardized format. Schemas of these notifications are described in detail in the Unique ID Push Open API specification. The standardized version of this API is [2.0.0](https://eclipse-tractusx.github.io/api-hub/eclipse-tractusx.github.io/kit-industry-core-unique-id-push-openAPI-2.0.0/swagger-ui/). Version [2.1.0](https://eclipse-tractusx.github.io/api-hub/eclipse-tractusx.github.io/kit-industry-core-unique-id-push-openAPI-2.1.0/swagger-ui/) is not (yet) standardized, but backwards compatible, and extends v2.0.0 with the Connect-to-Child feature.
 
 ##### Connect to Parent
 
@@ -193,7 +193,7 @@ Keep in mind that usage policies currently aren't technically enforced by the ED
 
 ##### Backend Data Service to Process Unique ID Push Notifications
 
-The receiver must setup a backend data service that provides an HTTP Endpoint for notifications. All endpoints are described in detail in the Unique ID Push Open API specification. The standardized version of this API is [2.0.0](../../../../openApi/industrycore/unique-id-push.yaml). Version [2.1.0](../../../../openApi/industrycore/unique-id-push_2-1-0.yaml) is not (yet) standardized, but backwards compatible, and extends v2.0.0 with the Connect-to-Child feature.
+The receiver must setup a backend data service that provides an HTTP Endpoint for notifications. All endpoints are described in detail in the Unique ID Push Open API specification. The standardized version of this API is [2.0.0](https://eclipse-tractusx.github.io/api-hub/eclipse-tractusx.github.io/kit-industry-core-unique-id-push-openAPI-2.0.0/swagger-ui/). Version [2.1.0](https://eclipse-tractusx.github.io/api-hub/eclipse-tractusx.github.io/kit-industry-core-unique-id-push-openAPI-2.1.0/swagger-ui/) is not (yet) standardized, but backwards compatible, and extends v2.0.0 with the Connect-to-Child feature.
 
 #### Notification Sender
 
