--- a/docs-kits_versioned_docs/version-24.08/kits/traceability-kit/architecture-view.mdx
+++ b/docs-kits_versioned_docs/version-24.08/kits/traceability-kit/architecture-view.mdx
@@ -109,7 +109,7 @@ There are no non-functional requirements defined for this release.
 
 Notifications are - in contrast to classical data offers - a way to push data from a sender to a receiver. In the below paragraphs, the implementation is described to realize quality notifications. In that sense, the below specification has not the scope and intention to be a general solution pattern for notifications across various use cases. For now, it is limited to the sending and receiving of quality notifications as well as the update of the notification status (following a predefined status model).
 
-> :raised_hand: Detailed Open API specifications for Quality Alerts & Investigations are available in the Software Development View. For the current release, [version 1.2.1](./openapi/notifications_1-2-1.yaml) is mandatory and must be supported by every App provider. The newer [version 2.0.0](./openapi/notifications_2-0-0.yaml) can be supported optionally.
+> :raised_hand: Detailed Open API specifications for Quality Alerts & Investigations are available in the Software Development View. For the current release, [version 1.2.1](https://eclipse-tractusx.github.io/api-hub/eclipse-tractusx.github.io/kit-traceability-notifications-openAPI-1.2.1/swagger-ui/) is mandatory and must be supported by every App provider. The newer [version 2.0.0](https://eclipse-tractusx.github.io/api-hub/eclipse-tractusx.github.io/kit-traceability-notifications-openAPI-2.0.0/swagger-ui/) can be supported optionally.
 
 #### Notification State Model
 
