--- a/docs-kits_versioned_docs/version-24.12/kits/eco-pass-kit/success-stories/battery-pass-viewer-app.mdx
+++ b/docs-kits_versioned_docs/version-24.12/kits/eco-pass-kit/success-stories/battery-pass-viewer-app.mdx
@@ -1,5 +1,5 @@
 ---
-id: Battery Pass Application Success Story
+id: battery-pass-application-success-story
 title: Battery Pass Application Success Story
 description: 'EcoPass KIT Success Stories'
 sidebar_position: 1
