adapt open planning information

--- a/blog/2025-03-20-release-planning-R25.09.mdx
+++ b/blog/2025-03-20-release-planning-R25.09.mdx
@@ -61,7 +61,7 @@ The sessions are used for refinement day 1 and 2.
 - Prepare initial ideas for features.
 - Identify potential dependencies with other groups or components.
 - Familiarize yourself with related roadmap items.
-- Use the supported-by field to map the feature with your expert group
+- Use the `Topic/Product` field to map the feature with your expert group
 
 ### Group and Teams Sessions
 
@@ -127,11 +127,32 @@ feature requesters are encouraged to attend and actively engage in the discussio
 
 Here’s the plan for the day:
 - **09:05 - 09:30**: Open Planning - Vision & Introduction
-- **09:30 - 16:00**: Joint Open Planning (all teams)
-- **16:00 - 16:30**: Feedback Retro
-- **16:30 - 17:00**: Open Planning Wrap-Up / Summary & Next Steps
+- **09:30 - 14:00**: Joint Open Planning (all teams)
+- **14:00 - 14:30**: Feedback Retro / Open Planning Wrap-up / Summary & Next Steps
 
-The planning sessions will be driven by our [Release Planning Board](https://github.com/orgs/eclipse-tractusx/projects/26/views/28?filterQuery=-status%3ADone+has%3Asupported-by+label%3A%22Prep-R25.09%22+status%3ABacklog), which organizes features based on their **supported-by** field.
+#### Joint Open Planning
+
+:::note
+The planning sessions will be driven by our [Release Planning Board](https://github.com/orgs/eclipse-tractusx/projects/26/views/28), which organizes features based on their **Topic/Product** field.
+:::
+
+| Time              | Committee                                 | Features |
+|-------------------|-------------------------------------------|----------|
+| 09:30 – 09:35     | DPP                                       | 1        |
+| 09:35 – 09:45     | Circularity                               | 2        |
+| 09:45 – 10:45     | Dataspace Connectivity                    | 10       |
+| 10:45 – 11:15     | BPDM                                      | 5        |
+| 11:15 – 11:20     | Digital Twin (DT)                         | 1        |
+| 11:20 – 11:25     | SSI                                       | 1        |
+| 11:25 – 12:00     | Portal                                    | 7        |
+| 12:00 – 13:00     | Lunch Break                               | –        |
+| 13:00 – 13:10     | Traceability                              | 2        |
+| 13:10 – 13:20     | DCM                                       | 2        |
+| 13:20 – 13:30     | PURIS                                     | 2        |
+| 13:30 – 13:40     | Industry Core                             | 2        |
+| 13:40 – 13:50     | Digital Twin                              | 1        |
+| 13:50 – 13:55     | Testmanagement                            | 1        |
+| 13:55 – 14:00     | Engineering                               | 1        |
 
 ### Prerequisites for features to be considered in Open Planning
 
@@ -140,7 +161,7 @@ For a feature to be included in the Open Planning, the following conditions must
 - **All categories in the feature template must be filled** – Do not delete any sections from the template.
 - **Milestone is NOT set** – This will be assigned during the Open Planning session.
 - **Contributor and Committer must be assigned**.
-- **Supported-by must be set**.
+- **`Topic/Product` must be set**.
 
 During the session, if there is a common alignment among the participants, the feature milestone can be set to **25.09**, meaning it will be developed in the upcoming release.
 
