add warning to the agenda

--- a/blog/2025-03-20-release-planning-R25.09.mdx
+++ b/blog/2025-03-20-release-planning-R25.09.mdx
@@ -154,6 +154,11 @@ The planning sessions will be driven by our [Release Planning Board](https://git
 | 13:50 – 13:55     | Testmanagement                            | 1        |
 | 13:55 – 14:00     | Engineering                               | 1        |
 
+:::warning[**Please note:**]
+- The agenda provides a **rough time structure** to help guide the session. The **timings are not fixed** and can be adjusted depending on the flow of the discussion.
+- Use the agenda as **orientation**, but we may deviate if needed based on progress.
+:::
+
 ### Prerequisites for features to be considered in Open Planning
 
 For a feature to be included in the Open Planning, the following conditions must be met:
