fourth set of broken link fixes

--- a/docs-kits/kits/industry-core-kit/changelog.mdx
+++ b/docs-kits/kits/industry-core-kit/changelog.mdx
@@ -107,7 +107,7 @@ Compatible for **release 24.05**.
 ### Removed
 
 - **Development View:**
-  - Removed generated Unique ID push API documentation (know [directly available as Open API file](openapi/industry-core/kit_industry-core-unique-id-push-openAPI_2-0.0.yaml))
+  - Removed generated Unique ID push API documentation (know [directly available as Open API file](https://eclipse-tractusx.github.io/api-hub/eclipse-tractusx.github.io/kit-industry-core-unique-id-push-openAPI-2.0.0/))
   - **Digital Twins:**
     - Removed deprecated properties for Unique ID Push notification asset
   - **Aspect Models:**
