--- a/docs-kits/kits/traceability-kit/changelog.mdx
+++ b/docs-kits/kits/traceability-kit/changelog.mdx
@@ -138,7 +138,7 @@ Compatible for **release 24.05**.
   - Removed generated Notification API documentation (know directly available as Open API file)
   - **Data Provider:**
     - Removed aspects SingleLevelUsageAsPlanned and SingleLevelUsageAsBuilt, because these aspects moved to the Industry Core
-    - (Re)moved policy section to the [Industry Core KIT](../industry-core-kit/software-development-view/policies-development-view)
+    - (Re)moved policy section to the [Industry Core KIT](../industry-core-kit/software-development-view/policies.mdx)
   - **App Provider:**
     - Removed quality notification API version 1.1.0
 
