--- a/docs-kits/kits/traceability-kit/software-development-view/data-provider.mdx
+++ b/docs-kits/kits/traceability-kit/software-development-view/data-provider.mdx
@@ -17,7 +17,7 @@ The following page offers specific developer resources, including payloads and A
 
 ## Policies
 
-Access policies like the BPN access policy and Usage Policies / Contract Policies are described in the [policy section of the Industry Core KIT](../../industry-core-kit/software-development-view/policies-development-view).
+Access policies like the BPN access policy and Usage Policies / Contract Policies are described in the [policy section of the Industry Core KIT](../../industry-core-kit/software-development-view/policies.mdx).
 
 ## NOTICE
 
