--- a/docs-kits_versioned_docs/version-25.03/kits/industry-core-kit/software-development-view/digital-twins.mdx
+++ b/docs-kits_versioned_docs/version-25.03/kits/industry-core-kit/software-development-view/digital-twins.mdx
@@ -92,7 +92,7 @@ Nevertheless, a search for digital twins can still be used via the corresponding
 
 #### Submodel Descriptors
 
-To enforce a strict need-to-know (and prevent data from being exposed to non-authorized parties), the visibility of entries in the attribute `specificAssetIds` must be protected, i.e.,their visibility must be restricted to authorized parties only. For that, the attribute `externalSubjectId` must be used. Detailed information about this can be found in the [Digital Twin KIT](../../../../kits/digital-twin-kit/software-development-view/).
+To enforce a strict need-to-know (and prevent data from being exposed to non-authorized parties), the visibility of entries in the attribute `specificAssetIds` must be protected, i.e.,their visibility must be restricted to authorized parties only. For that, the attribute `externalSubjectId` must be used. Detailed information about this can be found in the [Digital Twin KIT](../../digital-twin-kit/software-development-view/software-development-view.md).
 
 ##### Submodel Descriptors
 
@@ -304,7 +304,7 @@ To find the corresponding part instance twins to a given part type twin, it is p
 
 To find the corresponding part type twin to a given part instance twin, it is possible to search for the specific asset IDs `manufacturerId`, `manufacturerPartId` and `digitalTwinType = "PartType"` of the given part instance twin.
 
-To find the corresponding part instance twins to a given part instance twin, it is possible to search for the specific asset IDs `manufacturerId`, `manufacturerPartId` and `digitalTwinType = "PartInstance"` of the given part instance twin. 
+To find the corresponding part instance twins to a given part instance twin, it is possible to search for the specific asset IDs `manufacturerId`, `manufacturerPartId` and `digitalTwinType = "PartInstance"` of the given part instance twin.
 
 ### Unique ID Push
 
